sample-app-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-go-trace-api-1
  name: sample-go-trace-api-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-go-trace-api-1
  strategy: {}
  template:
    metadata:
      labels:
        app: sample-go-trace-api-1
    spec:
      containers:
      - image: asia-northeast1-docker.pkg.dev/ca-masem-test/any-container/sample-go-trace-api:v4.0.0
        name: sample-go-trace-api
        ports:
        - containerPort: 8080
          name: http
        resources: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-go-trace-api-1
  name: sample-go-trace-api-1
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: sample-go-trace-api-1
