sample-app-1/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: go-trace-api
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gw-infra
  rules:
    - backendRefs:
        - name: sample-go-trace-api-1
          port: 8080
